<resources>
    <string name="app_name">Simple Clicker</string>
    <string name="title_home">Juego</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="_0">0</string>
    <string name="_10">10</string>
    <string name="autominer">AutoMiner</string>
    <string name="puntos">Tus puntos:</string>
    <string name="click">CLIC</string>
    <string name="n_clicks">Clics:</string>
    <string name="sumador">Sumador:</string>
    <string name="precio">Precio:</string>
    <string name="nivel">&#xf201;</string>
    <string name="billete">&#xf3d1;</string>

    <string name="nav_drawer_open">Abrir menú lateral</string>
    <string name="nav_drawer_close">Cerrar menú lateral</string>

    <!--Iconos-->
    <string name="sumador_icon" translatable="false">&#xf067;</string>
    <string name="multiplicador_icon" translatable="false">&#xf067;</string>
    <string name="run" translatable="false">&#xf70c;</string>
    <string name="walk" translatable="false">&#xf554;</string>
    <string name="n_clicks_icon" translatable="false">&#xf0a6;</string>

    <!--Nav Bar-->
    <string name="desc">El clicker más simple</string>
    <string name="inicio">Inicio</string>
    <string name="ayuda">Ayuda</string>
    <string name="ajustes">Ajustes</string>
    <string name="mejoras">Mejoras</string>
    <string name="stats">Estadísticas</string>
    <string name="logros">Logros</string>

    <!--Metales-->
    <string name="aluminio">Aluminio</string>
    <string name="zinc">Zinc</string>
    <string name="niquel">Niquel</string>
    <string name="iridio">Iridio</string>
    <string name="uranio">Uranio</string>
    <string name="plata">Plata</string>
    <string name="cobre">Cobre</string>
    <string name="bronce">Bronce</string>
    <string name="diamante">Diamante</string>
    <string name="oro">Oro</string>
    <string name="platino">Platino</string>

    <!-- Auto click -->
    <string name="mejoras_autoclick">Mejoras de autoclick</string>
    <string name="autoclick_nivel1">Nivel 1</string>
    <string name="autoclick_nivel2">Nivel 2</string>
    <string name="autoclick_nivel3">Nivel 3</string>
    <string name="autoclick_nivel4">Nivel 4</string>

    <!-- Personal -->
    <string name="mejoras_personal">Mejoras de personal</string>
    <string name="personal_peon">Peón</string>
    <string name="personal_aprendiz">Aprendiz</string>
    <string name="personal_minero">Minero</string>
    <string name="personal_arquitecto">Arquitecto</string>
    <string name="personal_Jefazo">Jefazo</string>

    <!-- Maquinaria -->
    <string name="mejoras_maquinaria">Mejoras de maquinaria</string>
    <string name="maquinaria_pico">Pico</string>
    <string name="maquinaria_martillo">Martillo</string>
    <string name="maquinaria_vagoneta">Vagoneta</string>
    <string name="maquinaria_tuneladora">Tuneladora</string>
    <string name="maquinaria_dinamita">Dinamita</string>

    <!-- Herramientas -->
    <string name="mejoras_herramientas">Mejora calidad de las herramientas</string>
    <string name="herramientas_madera">Madera</string>
    <string name="herramientas_piedra">Piedra</string>
    <string name="herramientas_hierro">Hierro</string>
    <string name="herramientas_oro">Oro</string>
    <string name="herramientas_diamante">Diamante</string>

    <!--Ayuda strings-->
    <string name="objetivo">Objetivo:</string>
    <string name="objetivo_text">Conseguir el mayor número de puntos posible en el menor número de clics</string>
    <string name="comoJugar">¿Cómo se juega?</string>
    <string name="comoJugar_text">\t- Pulsa el boton rosa que dice Clic para obtener puntos.\n\n
        \t- Gasta tus puntos en comprar mejoras para ganar cada vez más puntos.\n\n
        \t- Cuanto más cueste la mejora, más aumentará el sumador &#xf067;.\n\n
        \t- Cada mejora tiene un nivel &#xf201; y un precio &#xf3d1;, cuánto mayor sea el nivel, mayor será el precio y la recompensa. \n\n
        \t- Hay 10 Mejoras de sumador &#xf067;, ordenadas de menor a mayor. Situadas encima de el boton Clic, con nombres de metales.\n\n
        \t- En el apartado de Mejoras hay dos mejoras llamadas AutoClickerlas cuales darán clics por ti, para que ganes más puntos.</string>
    <string name="faq">Preguntas frecuentes:</string>
    <string name="faq_text">- ¿Cómo guardo la partida? \n\t\tSe guarda automáticamente \n\n
	- ¿Cómo reinicio la partida?\n\t\t Ve a "Ajustes / Reiniciar partida", ten en cuenta que es irreversible</string>

    <!--Settings-->
    <string name="btn_reiniciarPartida">Reiniciar partida</string>
    <string name="txt_reiniciarPartida">Pulsa el botón para reiniciar la partida, ten en cuenta de que es una acción irreversible</string>

    <string name="btn_reiniciarEstadisticas">Reiniciar estadísticas</string>
    <string name="txt_reiniciarEstadisticas">Pulsa el botón para reiniciar las estadisticas totales, ten en cuenta de que es una acción irreversible</string>

    <string name="btn_tutorial">Tutorial</string>
    <string name="txt_tutorial">Pulsa el botón para volver a ver el tutorial</string>

    <string name="toast_tutorial">Cuando vuelvas a la pantalla de juego verás el tutorial</string>


    <!-- Mensajes sistema -->
    <string name="proximamente">Próximamente...</string>
    <string name="mejora_comprada">Mejora comprada</string>
    <string name="cant_comprar_mejora">No puedes comprar esa mejora</string>
    <string name="partida_reiniciada_OK">Partida reiniciada</string>
    <string name="partida_reiniciada_ERROR">No se ha podido reiniciar la partida</string>
    <string name="estadisticas_reiniciadas_OK">Estadísticas reiniciadas</string>
    <string name="estadisticas_reiniciadas_ERROR">No se han podido reiniciar las estadísticas</string>

    <!-- Dialog cerrar partida-->
    <string name="dialog_salir_titulo">Salir del juego</string>
    <string name="dialog_salir_mensaje">¿Estás seguro de que quieres salir?</string>
    <string name="dialog_salir_opt_afirmativa">Salir</string>
    <string name="dialog_salir_opt_negativo">Cancelar</string>

    <!-- Dialog reiniciar partida-->
    <string name="dialog_reiniciar_partida_titulo">Reiniciar partida</string>
    <string name="dialog_reiniciar_partida_mensaje">¿Estás seguro de que quieres reiniciar la partida? Perderás todo el progreso y las mejoras.</string>
    <string name="dialog_reiniciar_partida_opt_afirmativa">Reiniciar</string>
    <string name="dialog_reiniciar_partida_opt_negativo">Cancelar</string>

    <!-- Dialog reiniciar estadisticas-->
    <string name="dialog_reiniciar_estadisticas_titulo">Reiniciar estadisticas</string>
    <string name="dialog_reiniciar_estadisticas_mensaje">¿Estás seguro de que quieres reiniciar las estadísticas? La partida actual NO se borrará.</string>
    <string name="dialog_reiniciar_estadisticas_opt_afirmativa">Reiniciar</string>
    <string name="dialog_reiniciar_estadisticas_opt_negativo">Cancelar</string>

</resources>
