<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <!--OBJETIVO-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objetivo"
                android:textSize="18sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objetivo_text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <!--COMO JUGAR-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comoJugar"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />

            <TextView
                android:id="@+id/txtcomoJugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comoJugar_text"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <!--FAQ-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_text"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>